Fixed the double scroll bars on the home page.

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -283,42 +283,13 @@ label.checkbox {
     min-height: 560px;
 }
 
-.newsrole .scroll{
-    height: 1230px !important;
+.mainblock.scroll {
+    height: 610px;
 }
 
-.scroll {
-    overflow-y: hidden;
-    overflow-x: hidden;
-    height: 605px;
-}
-
-.scroll:hover {
-    overflow-y: auto;
-}
-
-/* Custom scrollbar */
-
-/* General scrollbar */
-.scroll::-webkit-scrollbar {
-    width: 6px;
-}
-
-/* Track */
-.scroll::-webkit-scrollbar-track {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-}
-
-/* Handle */
-.scroll::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: rgba(85,85,85,0.8);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
-.scroll::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(85,85,85,0.4);
+.newsrole .scroll {
+    height: 1240px;
+    overflow: hidden;
 }
 
 .readmore {
